welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: not found: value j
    setBrushColor(array((offset + j)%world_size))
                                  ^